--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
+
 .App {
   text-align: center;
+  padding: 0 7% 0 7%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App__gird{
+  display:grid;
+  grid-template-columns: minmax(150px,1fr) 3fr;
+  grid-template-rows: 50px max-content ;
+  grid-gap: 10px ;
+  grid-template-areas:
+          "head head"
+          "nav _content";
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App_content{
+  grid-area: _content;
+  background: #686a77;
+  border: 1px solid #c3b1bd;
+  border-radius: 7px;
 }
