ref:header and navbar style

--- a/src/features/App/Routes/routers.module.css
+++ b/src/features/App/Routes/routers.module.css
@@ -1,6 +1,5 @@
-.navbar {
-    background: #686a77;
-    grid-area: nav;
+.content{
+    grid-area: _content;
     border: 1px solid #c3b1bd;
     border-radius: 7px;
 }
