ref:Profile components style

--- a/src/features/Login/login.module.css
+++ b/src/features/Login/login.module.css
@@ -19,6 +19,13 @@
 }
 .loginButton {
     margin-bottom: 10px;
+    cursor: pointer;
+    transition: 0.2s ease;
+}
+
+.loginButton:hover {
+    background-color: #1f1f1f;
+    color: #FFF;
 }
 
 .formErrorBlock {
