--- a/src/features/Profile/ProfileInfo/profileInfo.module.css
+++ b/src/features/Profile/ProfileInfo/profileInfo.module.css
@@ -3,6 +3,8 @@
     display: flex;
     height: 30vh;
     align-items: center;
+    background-color: #aba6e5;
+    margin-bottom: 10px;
 }
 .right{
     display: flex;
@@ -23,13 +25,15 @@
 }
 
 .avaWrapper {
+
     display: block;
 }
 
 .avaWrapper img {
-    width: 150px;
-    height: 150px;
+    width: 170px;
+    height: 170px;
     border-radius: 50%;
+    border: 10px solid #FFFFFF;
 }
 
 .avaWrapper div {
