--- a/src/features/Dialogs/Dialog/Message/Message.module.css
+++ b/src/features/Dialogs/Dialog/Message/Message.module.css
@@ -9,7 +9,6 @@
     flex-direction: row;
     align-items: flex-end;
     width: 100%;
-    background-color:#0066cc;
 }
 
 .imageAndText img {
@@ -21,7 +20,7 @@
 
 .text {
     margin-bottom: 10px;
-    background-color: #F5F7FB;
+    background-color: #772fa6;
     border-radius: 10px;
     height: auto;
     display: flex;
