--- a/src/features/Dialogs/dialogs.module.css
+++ b/src/features/Dialogs/dialogs.module.css
@@ -1,11 +1,12 @@
 .dialogs {
     display: grid;
     grid-template-columns:3fr 10fr;
+    grid-template-areas: "dialogs messages";
 
 }
 
 .dialogs_items {
-
+    grid-area:dialogs
 }
 
 .dialog {
