--- a/src/features/Dialogs/Dialog/Message/Message.module.css
+++ b/src/features/Dialogs/Dialog/Message/Message.module.css
@@ -1,5 +1,5 @@
 .message {
-    width: 50%;
+    width: 70%;
     display: flex;
     flex-direction: column;
 }
@@ -23,46 +23,31 @@
     background-color: #772fa6;
     border-radius: 10px;
     height: auto;
+    max-width: 50vw;
     display: flex;
     flex-direction: column;
     padding: 10px;
 }
 
-.text:after {
-
-/*    content:'';
-    position: relative;
-
-    border-left: 15px solid transparent;
-    border-right: 15px solid transparent;
-    border-bottom: 15px solid #F5F7FB;
-
-    left: -10px;
-    bottom: 17px;*/
-
-}
-
 .name {
     font-family: 'Montserrat', serif;
-    
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
     line-height: 20px;
-    /* identical to box height */
-
-
     color: #000000;
 }
 
 .messageText {
-    white-space: pre-wrap;
     padding-top: 10px;
     font-family: 'Montserrat', serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 20px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
 }
 
 .time {
@@ -73,5 +58,4 @@
     font-size: 10px;
     line-height: 12px;
     color: #000000;
-
 }
